--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn">点击我体现按需加载</button>
+    <div id="app"></div>
 </body>
 <script src="./dist/main.js"></script>
 </html>
